--- a/development/index.html
+++ b/development/index.html
@@ -28,56 +28,59 @@
 </header>
 <main>
     <section>
-        <h1>Find new joy in second-hand toys</h1>
-        <p>High-quality items at a fraction of the price, and you’ll be helping to save our planet Earth by reducing
-            landfill.</p>
-        <ul>
-            <li><a href="#"><img src="img/AppStore.png" alt="Download from the App Store"></a></li>
-            <li><a href="#"><img src="img/GooglePlay.png" alt="Download from Google Play"></a></li>
-        </ul>
+        <div><h1>Find new joy in second-hand toys</h1>
+            <p>High-quality items at a fraction of the price, and you’ll be helping to save our planet Earth by reducing
+                landfill.</p>
+            <ul>
+                <li><a href="#"><img src="img/AppStore.png" alt="Download from the App Store"></a></li>
+                <li><a href="#"><img src="img/GooglePlay.png" alt="Download from Google Play"></a></li>
+            </ul>
+        </div>
     </section>
 
     <section class="share">
-        <h1>Share together</h1>
-        <p><a href="#">Sign up to our community of like-minded parents</a></p>
-        <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis corrumpit. At
-            facilisi contentiones per.</p>
+        <div><h1>Share together</h1>
+            <p><a href="#">Sign up to our community of like-minded parents</a></p>
+            <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis
+                corrumpit. At
+                facilisi contentiones per.</p></div>
     </section>
 
     <section class="treasures">
-        <h1>Hidden treasures</h1>
-        <p><a href="#">Find your little one’s next favourite toy, teddy, or swing</a></p>
-        <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis corrumpit. At
-            facilisi contentiones per.</p>
+        <div><h1>Hidden treasures</h1>
+            <p><a href="#">Find your little one’s next favourite toy, teddy, or swing</a></p>
+            <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis
+                corrumpit. At
+                facilisi contentiones per.</p></div>
     </section>
 
     <section class="money">
-        <h1>Store the money</h1>
-        <p><a href="#">Feel safe and secure paying for items through our built-in wallet platform</a></p>
-        <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis corrumpit. At
-            facilisi contentiones per.</p>
+        <div><h1>Store the money</h1>
+            <p><a href="#">Feel safe and secure paying for items through our built-in wallet platform</a></p>
+            <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis
+                corrumpit. At
+                facilisi contentiones per.</p></div>
     </section>
 
     <section class="planet">
-        <h1>One planet</h1>
-        <p><a href="#">Buy from local sellers on our marketplace to help protect the planet</a></p>
-        <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis corrumpit. At
-            facilisi contentiones per.</p>
+        <div><h1>One planet</h1>
+            <p><a href="#">Buy from local sellers on our marketplace to help protect the planet</a></p>
+            <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis
+                corrumpit. At
+                facilisi contentiones per.</p></div>
     </section>
 
     <section class="story">
-        <h1>Our story</h1>
-        <p class="bold--text">In hendrerit nulla pharetra ante pulvinar egestas. Sed commodo massa id est iaculis, sit amet congue.</p>
-        <p>In hendrerit nulla pharetra ante pulvinar egestas. Sed commodo massa id est iaculis, sit amet congue enim
-            placerat. Mauris leo arcu, mattis vitae sodales in, molestie eget quam.In hendrerit nulla pharetra ante
-            pulvinar egestas. Sed commodo massa id est iaculis, sit amet congue enim placerat. Mauris leo arcu, mattis
-            vitae sodales in, molestie eget quam.</p>
+        <div><h1>Our story</h1>
+            <p class="bold--text">In hendrerit nulla pharetra ante pulvinar egestas. Sed commodo massa id est iaculis,
+                sit amet congue.</p>
+            <p>In hendrerit nulla pharetra ante pulvinar egestas. Sed commodo massa id est iaculis, sit amet congue enim
+                placerat. Mauris leo arcu, mattis vitae sodales in, molestie eget quam.In hendrerit nulla pharetra ante
+                pulvinar egestas. Sed commodo massa id est iaculis, sit amet congue enim placerat. Mauris leo arcu,
+                mattis
+                vitae sodales in, molestie eget quam.</p></div>
         <figure>
-<!--            <picture>
-                <source src="img/mother_child.png"
-                        srcset="img/mother_child.png x1,
-                        img/mother_childx2.png x2">
-            </picture>-->
+
 
             <picture>
                 <img
@@ -99,13 +102,14 @@
     </section>
 
     <section class="in-touch">
-        <h1>Let’s stay in touch</h1>
-        <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis
-            corrumpit.</p>
-        <form>
-            <input type="email" placeholder="enter your email to subscribe" required>
-            <input type="submit" value="Subscribe">
-        </form>
+        <div><h1>Let’s stay in touch</h1>
+            <p>Dicta omnes ius ut, ei atomorum voluptatum definitionem per. Zril petentium sit at, vel at quis
+                corrumpit.</p>
+            <form>
+                <input type="email" placeholder="enter your email to subscribe" required>
+                <input type="submit" value="Subscribe">
+            </form>
+        </div>
     </section>
 
 </main>
@@ -117,12 +121,13 @@
         <li><a href="#"><img src="img/GooglePlay.png" alt="Download from Google Play"></a></li>
     </ul>
 
-    <ul class="social--platforms">
-        <li><a href="#"><img src="img/fbook.png" alt="Like us on Facebook"></a></li>
-        <li><a href="#"><img src="img/twitter.png" alt="Like us on Twitter"></a></li>
-        <li><a href="#"><img src="img/insta.png" alt="Like us on Instagram"></a></li>
-    </ul>
-    <p class="t--and--cs">&copy; Little Loft 2021. All Right Reserved.</p>
+    <div class="social--platforms">
+        <ul>
+            <li><a href="#"><img src="img/fbook.png" alt="Like us on Facebook" loading="lazy"></a></li>
+            <li><a href="#"><img src="img/twitter.png" alt="Like us on Twitter" loading="lazy"></a></li>
+            <li><a href="#"><img src="img/insta.png" alt="Like us on Instagram" loading="lazy"></a></li>
+        </ul>
+        <p class="t--and--cs">&copy; Little Loft 2021. All Right Reserved.</p></div>
 </footer>
 
 </body>
